完善代码及注释，以满足pmd检查条件